--- a/bims/templates/collections_form_page.html
+++ b/bims/templates/collections_form_page.html
@@ -31,12 +31,9 @@
         {% csrf_token %}
         <input type="hidden" id="site-id" name="site-id" value="{{ site_id }}">
         <div class="body-form container">
-            <div class="header">
-                Add {{ taxon_group_name }} data for site
-                <span id="site-identifier">
-                {% if location_site_code %}{{ location_site_code }} {% else %}
-                    {{ location_site_name }}{% endif %}
-                </span>
+            <div class="dashboard-title">
+                <h2>Add {{ taxon_group_name }} data for site {% if location_site_code %}{{ location_site_code }} {% else %}
+                    {{ location_site_name }}{% endif %}</h2>
             </div>
             <div class="alert alert-danger" role="alert"
                  style="display: none;">
