--- a/bims/templates/location_site_form_view.html
+++ b/bims/templates/location_site_form_view.html
@@ -44,20 +44,17 @@
                         {% endif %}
                     {% endfor %}
             {% endif %}
-            <div class="header">
-                {% if update %}
-                    Update a location site
-                {% else %}
-                    Add a location site
-                {% endif %}
-                <span id="site-identifier">
-                {% if location_site_code %}{{ location_site_code }} {% else %}
-                    {{ location_site_name }}{% endif %}
-                </span>
-
-                <div class="site-form-close">
-                    <i class="fa fa-times" aria-hidden="true"></i>
-                </div>
+            <div class="dashboard-title">
+                <h2>
+                    {% if update %}
+                        Update a location site {{ site_identifier }}
+                    {% else %}
+                        Add a location site
+                    {% endif %}
+                    <div class="site-form-close">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </div>
+                </h2>
             </div>
             <div class="alert alert-danger" role="alert"
                  style="display: none;">
@@ -67,7 +64,7 @@
                 <div class="form-group row">
                     <div class="col-lg-12">
                         <a href="/fish-form/?siteId={{ site_id }}" class="btn btn-info">Add Fish</a>
-                        <a href="/invert-form/?siteId={{ site_id }}" class="btn btn-info">Add Invert</a>
+                        <a href="/invert-form/?siteId={{ site_id }}" class="btn btn-info">Add Invertebrate</a>
                         <a href="/sass/{{ site_id }}/" class="btn btn-info">Add SASS</a>
                     </div>
                 </div>
@@ -76,17 +73,21 @@
             </div>
             <div class="form-group row">
                 <label for="date"
-                       class="col-sm-1 col-form-label col-form-label">Latitude*</label>
-                <input type="text" id="latitude" name="latitude"
-                       class="col-sm-2 form-control form-control-sm"
+                       class="col-sm-2 col-form-label col-form-label">Latitude*</label>
+                <div class="col-sm-2">
+                    <input type="text" id="latitude" name="latitude"
+                       class="form-control form-control-sm" style="height: 100%"
                        value="{{ location_site_lat }}" {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %} required>
+                </div>
                 <label for="date"
-                       class="col-sm-1 col-form-label col-form-label">Longitude*</label>
-                <input type="text" id="longitude" name="longitude"
-                       class="col-sm-2 form-control form-control-sm"
+                       class="col-sm-2 col-form-label col-form-label" style="text-align: right">Longitude*</label>
+                <div class="col-sm-2">
+                    <input type="text" id="longitude" name="longitude"
+                       class="form-control form-control-sm" style="height: 100%"
                        value="{{ location_site_long }}" {% if update %}{% if not allow_to_edit %}disabled{% endif %}{% endif %} required>
-                <div class="update-taxon-container col-sm-2">
-                    <button id="update-coordinate" type="button"
+                </div>
+                <div class="update-taxon-container col-sm-4">
+                    <button id="update-coordinate" type="button" style="width: 100%"
                             class="btn btn-default" disabled>
                         Update coordinate
                     </button>
@@ -200,15 +201,19 @@
                     Abiotic Data
                 </label>
                 <div class="col-10">
+                    {% if surveys %}
                     <ul class="list-group">
                         {% for survey in surveys %}
                         <li class="list-group-item d-flex justify-content-between align-items-center survey">
                             {{ survey.date }}
-                            <span class="badge badge-primary badge-pill">Total abiotic data : {{ survey.chemical_record_count }}</span>
-                            <span><a href="/abiotic/?survey={{ survey.id }}&next=/location-site-form/update/?id={{ site_id }}"  class="btn btn-success">Update data</a></span>
+                            <span class="badge badge-primary badge-pill">Abiotic records : {{ survey.chemical_record_count }}</span>
+                            <span><a href="/abiotic/?survey={{ survey.id }}&next=/location-site-form/update/?id={{ site_id }}"  class="btn btn-success">Update</a></span>
                         </li>
                         {% endfor %}
                     </ul>
+                    {% else %}
+                    <div style="padding-top: 10px;">-</div>
+                    {% endif %}
                 </div>
             </div>
             <div class="form-group row">
@@ -281,8 +286,8 @@
             <div class="form-group submit-holder">
                 {% if update %}
                     {% if allow_to_edit %}
-                        <input class="btn btn-success submit-button" type="submit" value="SAVE">
                         <input type="button" data-toggle="modal" data-target="#confirm-delete" class="btn btn-danger" value="DELETE">
+                        <input class="btn btn-success submit-button" type="submit" value="SAVE">
                     {% endif %}
                 {% else %}
                     <input class="btn btn-success submit-button" type="submit" value="ADD">
