--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -16,6 +16,7 @@
 
     <link href="{% static "css/base.css" %}" rel="stylesheet">
     <link href="{% static "css/navbar.css" %}" rel="stylesheet">
+    <link href="{% static "css/main.css" %}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400i,500,500i,700,700i|Roboto+Condensed:100,100i,300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
