--- a/sass/templates/form_only_read_page.html
+++ b/sass/templates/form_only_read_page.html
@@ -27,15 +27,13 @@
 {% block body_content %}
 
     <div class="body-form container">
-        <div class="row">
-            <div class="col-lg-9">
-                <h2>View SASS record</h2>
-            </div>
-            <div class="site-code col-lg-3" style="margin-top: 0 !important;">
-                <div class="sass-form-close-container">
-                    <div class="sass-form-close"><i class="fa fa-times" aria-hidden="true"></i></div>
+        <div class="dashboard-title">
+            <h2>
+                View SASS record for site <a href="/location-site-form/update/?id={{ site_id }}">{{ site_identifier }}</a>
+                <div class="site-form-close sass-form-close">
+                    <i class="fa fa-times" aria-hidden="true"></i>
                 </div>
-            </div>
+            </h2>
         </div>
         {% if user.is_superuser or owner == user or collector == user %}
             <a class="btn btn-primary btn-normal" style="margin-bottom: 10px;" href="/sass/update/{{ site_visit_id }}/">Edit</a>
