--- a/bims/static/css/site_form.css
+++ b/bims/static/css/site_form.css
@@ -74,22 +74,6 @@ label.error {
     background-color: rgba(0,60,136,.7);
 }
 
-.site-form-close {
-    float: right;
-    font-size: 20pt;
-    background-color: #526B43;
-    padding-left: 10px;
-    padding-right: 10px;
-    color: #ffffff;
-    margin-bottom: 5px;
-}
-
-.site-form-close:hover {
-    cursor: pointer;
-    color: #526B43;
-    background-color: #ffffff;
-}
-
 .delete-image-btn {
     opacity: 0.8;
 }
@@ -100,4 +84,9 @@ label.error {
     text-align: center;
     top: 0;
     padding-top: 10px;
+}
+
+.survey a {
+    color: white;
+    font-size: 10pt;
 }
