--- a/sass/templates/form_only_read_page.html
+++ b/sass/templates/form_only_read_page.html
@@ -56,7 +56,7 @@
                                         class="btn btn-default"
                                         data-dismiss="modal">Cancel
                                 </button>
-                                <button type="submit" value="Yes" id="submit"
+                                <button type="submit" value="Yes"
                                         class="btn btn-success success" data-message="Deleting...">Delete</button>
                             </div>
                         </div>
