--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -456,7 +456,7 @@ html, body, .map, .map-wrapper, #map-container {
     text-align: left;
     background: none;
     color: black;
-    padding-top: 2px;
+    padding-top: 8px;
     padding-bottom: 2px;
     padding-left: 5px;
     padding-right: 5px;
@@ -465,7 +465,16 @@ html, body, .map, .map-wrapper, #map-container {
     height: 40px;
 }
 
-.map-control-panel-box li:hover {
+.map-control-panel-box li.disabled {
+    color: #acacac;
+}
+
+.map-control-panel-box li.disabled:hover {
+    background-color: white;
+    cursor: default;
+}
+
+.map-control-panel-box li:hover, .map-control-panel-box li.selected {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
