--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -352,6 +352,35 @@
     </div>
 </script>
 
+<script type="text/html" id="lasso-control-panel-template">
+    {# lasso control container #}
+    <div class="lasso-control-container map-control-panel-box">
+        <div class="row">
+            <div class="col-md-12" style="padding-right: 0">
+                <span class="title">
+                    LASSO CONTROL
+                </span>
+                <div class="close-button map-result-close pull-right">
+                    <img class="close-icon" src="/static/img/close_icon.svg">
+                </div>
+            </div>
+        </div>
+        <div class="row content" style="border-top: 1px solid darkgray; margin-top: 3px">
+            <ul id="lasso-options" style="width:100%">
+                <li class="polygonal-lasso-tool">
+                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Draw a Polygon
+                </li>
+                <li class="update-search disabled">
+                    <i class="fa fa-search-plus" aria-hidden="true"></i> Update Search
+                </li>
+                <li class="clear-lasso disabled">
+                    <i class="fa fa-eraser" aria-hidden="true"></i> Clear Polygon
+                </li>
+            </ul>
+        </div>
+    </div>
+</script>
+
 <script type="text/html" id="spatial-filter-panel">
     <div class="row sub-filter content spatial-scale-menu">
         <div class="col-lg-12 subtitle">
@@ -506,6 +535,11 @@
         data-toggle="popover"
              data-placement="right" data-trigger="hover" data-content="Search">
             <i class="fa fa-search" aria-hidden="true"></i>
+        </div>
+        <div id="lasso-control" class="lasso-control sub-control-panel"
+        data-toggle="popover"
+             data-placement="right" data-trigger="hover" data-content="Lasso Control">
+            <i class="fa fa-object-group" aria-hidden="true"></i>
         </div>
         <div id="filter-control" class="filter-control sub-control-panel"
         data-toggle="popover"
