Add download chart to Ecological category

--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -345,7 +345,13 @@
                     </div>
                     <div class="vertical-space"></div>
                     <div class="chart-container">
-                        <div class="chart-title">Ecological category</div>
+                        <div class="chart-title">Ecological category
+                            <i data-download-title="Ecological category"
+                               data-download-chart="ecological-category"
+                               data-toggle="tooltip" data-placement="left"
+                               title="Download chart"
+                               class="fa fa-download pull-right download-icon download-chart-new"></i>
+                        </div>
                         <div class="ecological-chart-header">-</div>
                         <canvas id="ecological-category-chart"></canvas>
                         <center><div class="ecological-legend-info">A: Natural - B: Good - C: Fair - D: Poor - E/F: Seriously/Critically modified</div></center>
