--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -1042,7 +1042,7 @@ div:hover::-webkit-scrollbar {
     overflow-y: scroll;
     position: absolute;
     left: 0.5em;
-    bottom: 80px;
+    bottom: 40px;
     background-color: white;
     cursor: pointer;
     z-index: 999;
@@ -1058,7 +1058,7 @@ div:hover::-webkit-scrollbar {
     overflow-y: scroll;
     position: absolute;
     left: 0.5em;
-    bottom: 80px;
+    bottom: 40px;
     background-color: white;
     cursor: pointer;
     z-index: 999;
@@ -1081,6 +1081,7 @@ div:hover::-webkit-scrollbar {
 }
 
 #start-tutorial {
+    display: none;
     border-radius: 5px;
     min-height: 31px;
     min-width: 31px;
