Default to show all sites

--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -78,7 +78,7 @@
             <div class="col-lg-12 filter-content">
                 <div><input id="filter-validation-validated"
                             name="filter-validation" type="checkbox"
-                            value="validated" checked> <label class="checkbox-label" for="filter-validation-validated">Validated</label>
+                            value="validated"> <label class="checkbox-label" for="filter-validation-validated">Validated</label>
                 </div>
                 <div><input id="filter-validation-non-validated" name="filter-validation" type="checkbox"
                             value="non validated"> <label class="checkbox-label" for="filter-validation-non-validated">Non validated</label>
@@ -95,9 +95,6 @@
                         <label class="checkbox-label" for="filter-validation-non-sass-acredited">Non SASS Accredited</label>
                     </div>
                 {% endif %}
-                <div id="filter-validation-error">Please tick at least one
-                    filter.
-                </div>
             </div>
 
             <div class="button-filter-wrapper">
