--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -387,7 +387,7 @@
                             Metadata Table
                         </div>
                         <div class="data-content">
-                            <table id="data-source-list" class="table table-hover custom-table">
+                            <table id="data-source-list" class="table table-hover custom-table metadata-table">
                             </table>
                         </div>
                     </div>
