--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -188,19 +188,19 @@
                             </div>
                         </div>
                     </div>
-                    {#  Metadata table #}
-                    <div class="row">
-                        <div class="col-lg-12" id="sdd-metadata-table-list">
-                            <div class="card">
-                                <div class="card-header">
-                                    <div class="card-header-title pull-left d-inline">
-                                        Metadata Table
-                                    </div>
-                                </div>
-                                <div class="card-body">
-                                    <table id="metadata-table-list-taxon"  class="table table-hover custom-table"></table>
-                                </div>
+                </div>
+            </div>
+            {#  Metadata table #}
+            <div class="row">
+                <div class="col-lg-12" id="sdd-metadata-table-list">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-title pull-left d-inline">
+                                Metadata Table
                             </div>
+                        </div>
+                        <div class="card-body">
+                            <table id="metadata-table-list-taxon"  class="table table-hover custom-table metadata-table"></table>
                         </div>
                     </div>
                 </div>
@@ -658,7 +658,7 @@
                         </button>
                     </div>
                     <div class="card-body">
-                        <table id="metadata-table-list" class="table table-hover custom-table">
+                        <table id="metadata-table-list" class="table table-hover custom-table metadata-table">
                         </table>
                     </div>
                 </div>
