--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -212,7 +212,7 @@ Metadata Table
                         Metadata Table
                     </div>
                     <div class="data-content">
-                        <table id="data-source-list" class="table table-hover custom-table"></table>
+                        <table id="data-source-list" class="table table-hover custom-table metadata-table"></table>
                     </div>
                 </div>
             </div>
