--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -22,6 +22,24 @@
         const arrAvg = arr => arr.reduce((a, b) => a + b, 0) / arr.length;
         const sassExists = {% if sass_exists %}true{% else %}false{% endif %};
     </script>
+    <style>
+        .carousel-inner, .carousel-item {
+            height: 100% !important;
+        }
+
+        .carousel-item img {
+            max-height: 100%;
+            max-width: 100%;
+            width: auto;
+            height: auto;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+        }
+    </style>
 
 {% endblock %}
 
@@ -251,7 +269,7 @@
                 <div class="col-md-6 mp">
                     <div class="chart-container">
                         {% if site_image %}
-                            <div id="siteImageCarousel" class="carousel slide" data-ride="carousel">
+                            <div id="siteImageCarousel" class="carousel slide" data-ride="carousel" style="height: 500px">
                                 <!-- Indicators -->
                                 <ol class="carousel-indicators">
                                     {% for image in site_image %}
@@ -268,17 +286,25 @@
                                     {% for image in site_image %}
                                         {% if forloop.counter0 == 0 %}
                                             <div class="carousel-item active">
-                                            {% thumbnail image.image "x500" crop="center" as im %}
-                                                <img src="{{ im.url }}">
-                                            {% endthumbnail %}
-                                            </div>
                                         {% else %}
                                             <div class="carousel-item">
-                                                {% thumbnail image.image "x500" crop="center" as im %}
-                                                    <img src="{{ im.url }}">
-                                                {% endthumbnail %}
-                                            </div>
                                         {% endif %}
+                                            {% if image.image|is_portrait %}
+                                                {% thumbnail image.image "x500" crop="center" as thumb %}
+                                                    <a href="/uploaded/{{ image.image }}" target="_blank"><img src="{{ thumb.url }}"
+                                                         height="{{ thumb.height }}"
+                                                         width="{{ thumb.width }}"/>
+                                                    </a>
+                                                {% endthumbnail %}
+                                            {% else %}
+                                                {% thumbnail image.image "500" crop="center" as thumb %}
+                                                   <a href="/uploaded/{{ image.image }}" target="_blank"><img src="{{ thumb.url }}"
+                                                         height="{{ thumb.height }}"
+                                                         width="{{ thumb.width }}"/>
+                                                    </a>
+                                                {% endthumbnail %}
+                                            {% endif %}
+                                        </div>
                                     {% endfor %}
                                 </div>
 
