--- a/td_biblio/templates/_layouts/base.html
+++ b/td_biblio/templates/_layouts/base.html
@@ -1,5 +1,6 @@
 {% extends 'main_base.html' %}
 {% load static from staticfiles %}
+{% load thumbnail %}
 
 {% block subtitle %}
     Bibliography
@@ -67,7 +68,6 @@
         <div role="main">
             {% block content %}{% endblock content %}
         </div>
-
     </div>
 
     {% block javascripts %}{% endblock javascripts %}
