--- a/td_biblio/templates/td_biblio/layouts/two_cols_right_sidebar.html
+++ b/td_biblio/templates/td_biblio/layouts/two_cols_right_sidebar.html
@@ -1,15 +1,9 @@
 {% extends "_layouts/base.html" %}
 
-{% load static from staticfiles %}
+{% load static %}
 
-{% block body_content %}
-
+{% block content %}
 <div id="content-wrapper">
-    <div id="left-sidebar" class="{% block left_sidebar_class %}{% endblock left_sidebar_class %}">
-        {% block left_sidebar_extras %}{% endblock left_sidebar_extras %}
-        {% block left_sidebar %}{% endblock left_sidebar %}
-    </div>
-
     <div id="main-content" class="{% block main_content_class %}{% endblock main_content_class %}">
         {% block main_content %}{% endblock main_content %}
     </div>
@@ -19,7 +13,8 @@
         {% block right_sidebar %}{% endblock right_sidebar %}
     </div>
 </div>
-{% endblock body_content %}
+{% endblock content %}
 
 {% block javascripts %}
+<script src="{% static 'td_biblio/javascripts/td_biblio.js' %}"></script>
 {% endblock javascripts %}
