Update biblio page style

--- a/td_biblio/templates/_layouts/base.html
+++ b/td_biblio/templates/_layouts/base.html
@@ -10,8 +10,6 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static "css/landing_page.css" %}" rel="stylesheet" xmlns="http://www.w3.org/1999/html">
-    <!-- Google Fonts -->
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <!-- CSS Reset -->
     <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
     <!-- Milligram CSS minified -->
@@ -28,7 +26,6 @@
 
     <style>
         body {
-            margin-top: 5%;
             padding-bottom: 5%;
         }
 
@@ -38,6 +35,9 @@
             text-decoration: none;
         }
 
+        .hr-navbar {
+            width: 100%;
+        }
 
     </style>
 
