--- a/bims/templates/collections_form_page.html
+++ b/bims/templates/collections_form_page.html
@@ -228,6 +228,9 @@
                                 <option value="min"> Time (min)</option>
                                 <option value="square_metre"> Area (m&sup2;)
                                 </option>
+                                {% if taxon_group_name == 'Algae' %}
+                                    <option value="replicates"> Replicates </option>
+                                {% endif %}
                             </select>
                         </div>
                         <div class="col-8">
@@ -240,6 +243,26 @@
                     </div>
                 </div>
             </div>
+            {% if taxon_group_name == 'Algae' %}
+                <div class="form-group row">
+                    <label for="date"
+                           class="col-sm-2 col-form-label col-form-label">Curation
+                        Process</label>
+                    <div class="col-sm-10">
+                        <select class="form-control"
+                                name="curation_process">
+                            <option value=""> Not specified
+                            </option>
+                            <option value="Acid cleaned (diatoms)">
+                                Acid cleaned (diatoms)
+                            </option>
+                            <option value="Preserved lugols">
+                                Preserved lugols
+                            </option>
+                        </select>
+                    </div>
+                </div>
+            {% endif %}
             <div class="form-group row">
                 <label for="date"
                        class="col-sm-2 col-form-label col-form-label">Site
