Download chart as svg for all dashboard

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -147,6 +147,9 @@
 
 {% block foot %}
     <!-- Plugin JavaScript -->
+    <script src="{% static "js/libs/canvas2svg.js" %}"></script>
+    <script src="{% static "js/utils/svg_download.js" %}"></script>
+
     {% grunt_module "map_view" %}
 
 {% endblock %}
