--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -103,7 +103,7 @@
                                         Occurrences
                                     </div>
                                     <button class="ssdd-export btn btn-default pull-right"
-                                            data-datac="taxa-records-timeline-graph">
+                                            data-datac="taxa-records-timeline-graph" data-title="Taxon Occurrences" data-chart="taxon_occurrences">
                                         <i class="fa fa-download"></i>
                                     </button>
                                 </div>
@@ -467,7 +467,8 @@
                             Occurrence Charts
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="data-summary">
+                                data-datac="data-summary" data-title="Origin,Endemism,Conservation Status,Sampling Method,Biotope"
+                                data-chart="origin_pie,endemism_pie,cons_status_pie,sampling_method_pie,biotope_pie">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
@@ -536,7 +537,7 @@
                             Occurrences
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="species-ssdd-occurrences-line-chart-canvas">
+                                data-datac="species-ssdd-occurrences-line-chart-canvas" data-title="Occurrences" data-chart="occurrences_line">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
@@ -554,7 +555,7 @@
                             Taxa
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="species-ssdd-taxa-occurrences-line-chart-canvas">
+                                data-datac="species-ssdd-taxa-occurrences-line-chart-canvas" data-chart="occurrences_line" data-title="Taxa Occurrences">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
@@ -573,7 +574,7 @@
                             Origin
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="species-ssdd-origin-bar-chart-canvas">
+                                data-datac="species-ssdd-origin-bar-chart-canvas" data-chart="origin_bar" data-title="Origin">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
@@ -592,7 +593,7 @@
                             Endemism
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="species-ssdd-endemism-bar-chart">
+                                data-datac="species-ssdd-endemism-bar-chart" data-chart="endemism" data-title="Endemism">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
@@ -611,7 +612,7 @@
                             Conservation Status
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="species-ssdd-cons-status-bar-chart-canvas">
+                                data-datac="species-ssdd-cons-status-bar-chart-canvas" data-title="Conservation status" data-chart="cons_status_bar">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
