--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -103,6 +103,8 @@
                                         Occurrences
                                     </div>
                                     <button class="ssdd-export btn btn-default pull-right"
+                                            data-toggle="tooltip" data-placement="left"
+                                            title="Download charts as svg which you can drag and drop to excel or word"
                                             data-datac="taxa-records-timeline-graph" data-title="Taxon Occurrences" data-chart="taxon_occurrences">
                                         <i class="fa fa-download"></i>
                                     </button>
@@ -467,6 +469,8 @@
                             Occurrence Charts
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
+                                data-toggle="tooltip" data-placement="left"
+                                title="Download charts as svg which you can drag and drop to excel or word"
                                 data-datac="data-summary" data-title="Origin,Endemism,Conservation Status,Sampling Method,Biotope"
                                 data-chart="origin_pie,endemism_pie,cons_status_pie,sampling_method_pie,biotope_pie">
                             <i class="fa fa-download"></i>
@@ -537,7 +541,10 @@
                             Occurrences
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
-                                data-datac="species-ssdd-occurrences-line-chart-canvas" data-title="Occurrences" data-chart="occurrences_line">
+                                data-toggle="tooltip" data-placement="left"
+                                title="Download chart as svg which you can drag and drop to excel or word"
+                                data-datac="species-ssdd-occurrences-line-chart-canvas"
+                                data-title="Occurrences" data-chart="occurrences_line">
                             <i class="fa fa-download"></i>
                         </button>
                     </div>
@@ -555,6 +562,8 @@
                             Taxa
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
+                                data-toggle="tooltip" data-placement="left"
+                                title="Download chart as svg which you can drag and drop to excel or word"
                                 data-datac="species-ssdd-taxa-occurrences-line-chart-canvas" data-chart="occurrences_line" data-title="Taxa Occurrences">
                             <i class="fa fa-download"></i>
                         </button>
@@ -574,6 +583,8 @@
                             Origin
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
+                                data-toggle="tooltip" data-placement="left"
+                                title="Download chart as svg which you can drag and drop to excel or word"
                                 data-datac="species-ssdd-origin-bar-chart-canvas" data-chart="origin_bar" data-title="Origin">
                             <i class="fa fa-download"></i>
                         </button>
@@ -593,6 +604,8 @@
                             Endemism
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
+                                data-toggle="tooltip" data-placement="left"
+                                title="Download chart as svg which you can drag and drop to excel or word"
                                 data-datac="species-ssdd-endemism-bar-chart" data-chart="endemism" data-title="Endemism">
                             <i class="fa fa-download"></i>
                         </button>
@@ -612,6 +625,8 @@
                             Conservation Status
                         </div>
                         <button class="ssdd-export btn btn-default pull-right"
+                                data-toggle="tooltip" data-placement="left"
+                                title="Download chart as svg which you can drag and drop to excel or word"
                                 data-datac="species-ssdd-cons-status-bar-chart-canvas" data-title="Conservation status" data-chart="cons_status_bar">
                             <i class="fa fa-download"></i>
                         </button>
